parse data to network_graph popup

--- a/network_graph.html
+++ b/network_graph.html
@@ -1,3 +1,19 @@
-<script src="network_graph.js"></script>
-empty popup
-<p id='paragraph'></p>
+<style>
+    #cy {
+        width: 100vw;
+        height: 100vh;
+    }
+</style>
+
+<body>
+    <script src="network_graph.js"></script>
+    empty popup
+    <div id='cy'></div>
+    <p id='paragraph'></p>
+
+    <script src='cytoscape.js'>
+    </script>
+
+    <script src='components/iframe-graph/iframe-graph.js'>
+    </script>
+</body>
