--- a/network_graph.html
+++ b/network_graph.html
@@ -6,14 +6,12 @@
 </style>
 
 <body>
-    <script src="network_graph.js"></script>
-    empty popup
     <div id='cy'></div>
     <p id='paragraph'></p>
-
     <script src='cytoscape.js'>
     </script>
+    <script src="network_graph.js"></script>
 
-    <script src='components/iframe-graph/iframe-graph.js'>
+    <!-- <script src='components/iframe-graph/iframe-graph.js'> -->
     </script>
 </body>
